force-app/main/default/objects/Incident/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To?</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incidents (Assigned To?)</relationshipLabel>
    <relationshipName>Incidents1</relationshipName>
    <type>Lookup</type>
</CustomField>