force-app/main/default/objects/Incident/fields/Building_Address__c.field-meta.xml
<CustomField>
    <fullName>Building_Address__c</fullName>
    <formula>Building__r.BillingStreet + &apos;, &apos; + Building__r.BillingCity + &apos;, &apos; + Building__r.BillingPostalCode</formula>
    <label>Building Address</label>
    <type>Text</type>
</CustomField>