force-app/main/default/objects/Incident/fields/Fire_Department_Notified__c.field-meta.xml
<CustomField>
    <fullName>Fire_Department_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Department Notified</label>
    <type>Checkbox</type>
</CustomField>