force-app/main/default/objects/Incident/fields/Fire_Dept_Response__c.field-meta.xml
<CustomField>
    <fullName>Fire_Dept_Response__c</fullName>
    <label>Fire Dept Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>