force-app/main/default/objects/Incident/fields/Nearest_Fire_Departments__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Fire_Departments__c</fullName>
    <formula>Building__r.Nearest_Fire_Dept_1__c &amp; BR() &amp; Building__r.Nearest_Fire_Dept_2__c &amp; BR() &amp;  Building__r.Nearest_Fire_Dept_3__c</formula>
    <label>Nearest Fire Departments</label>
    <type>Text</type>
</CustomField>