force-app/main/default/objects/Incident/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical Fault</fullName>
            </value>
            <value>
                <fullName>Mechanical Failure</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>Arson / Intentional</fullName>
            </value>
            <value>
                <fullName>Chemical Reaction</fullName>
            </value>
            <value>
                <fullName>Heating System Failure</fullName>
            </value>
            <value>
                <fullName>Lightning Strike</fullName>
            </value>
            <value>
                <fullName>False Alarm / No Fire</fullName>
            </value>
            <value>
                <fullName>Natural Causes - Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>