force-app/main/default/objects/Incident/fields/Root_Cause_Others__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Others__c</fullName>
    <label>Root Cause (Others)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>